Fixed overflow

--- a/src/components/PageTools/BrushCircle/BrushCircle.module.css
+++ b/src/components/PageTools/BrushCircle/BrushCircle.module.css
@@ -7,6 +7,7 @@
   z-index: -1; /* Increased z-index to make it appear on top */
   
   pointer-events: none;
+  overflow-x: hidden;
 }
 
 @media (max-width: 779px) {
